--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Read Manga free"
     />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <title>{{title}} - Mangadex</title>
+    <title>Mangadex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
